--- a/app/src/main/res/layout/activity_cafe.xml
+++ b/app/src/main/res/layout/activity_cafe.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="order.OrderActivity">
+    tools:context=".order.cafe.CafeActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -111,6 +111,6 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/categoryScrollView"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_cafe" />
+        tools:listitem="@layout/item_store" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
