--- a/app/src/main/res/layout/activity_korean.xml
+++ b/app/src/main/res/layout/activity_korean.xml
@@ -105,7 +105,7 @@
     </HorizontalScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cafeRecyclerView"
+        android:id="@+id/koreanRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="16dp"
