--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -14,20 +14,20 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/cafeImage"
+            android:id="@+id/storeImage"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
             android:src="@drawable/banner3" />
 
         <TextView
-            android:id="@+id/cafeName"
+            android:id="@+id/storeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginStart="10dp"
             android:fontFamily="@font/pretendard_black"
-            android:text="카페 이름"
+            android:text="가게 이름"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -39,7 +39,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/cafeRating"
+                android:id="@+id/storeRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/pretendard_bold"
@@ -47,7 +47,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/cafeReviews"
+                android:id="@+id/storeReviews"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
@@ -56,7 +56,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/cafeDistance"
+                android:id="@+id/storeDistance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -65,7 +65,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/cafeDeliveryFee"
+                android:id="@+id/storeDeliveryFee"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -74,8 +74,8 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/cafeDeliveryTime"
-                android:layout_width="wrap_content"
+                android:id="@+id/storeDeliveryTime"
+                android:layout_width="51dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="70dp"
                 android:fontFamily="@font/pretendard_bold"
