--- a/app/src/main/res/layout/layout_slide_menu.xml
+++ b/app/src/main/res/layout/layout_slide_menu.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:id="@+id/linearLayout5"
+                    android:id="@+id/myPage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -68,7 +68,7 @@
                     android:background="#EEEEEE"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
+                    app:layout_constraintTop_toBottomOf="@+id/myPage" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
