--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -265,6 +265,7 @@
             android:fontFamily="@font/pretendard_bold"
             android:text="결제하기"
             android:textSize="16sp"
+            android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/totalPriceText" />
 
 
