--- a/app/src/main/res/layout/layout_slide_menu.xml
+++ b/app/src/main/res/layout/layout_slide_menu.xml
@@ -113,6 +113,7 @@
                 android:padding="10dp">
 
                 <LinearLayout
+                    android:id="@+id/deliveryView"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -124,14 +125,14 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/coin" />
+                        android:src="@drawable/delivery" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/pretendard_bold"
                         android:layout_gravity="center"
-                        android:text="포인트" />
+                        android:text="배달현황" />
                 </LinearLayout>
 
                 <View
